modified the body

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="myStyle2.css"> 
   </head>
+<body>  
 <div class="container-fluid body">
 <h1 class="text-primary red-text" align= center> David Howell Evans</h1>
 <h3 class="red-text" align= center><em>The Master of the Sonic Landscape</em></h3>
@@ -30,7 +31,6 @@
      </p>
   </div>
 </div>
-
-
 </div>
+</body>
 </html>
